--- a/Test.Urasandesu.Prig/Test.Urasandesu.Prig.vcxproj.filters
+++ b/Test.Urasandesu.Prig/Test.Urasandesu.Prig.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="Test.Urasandesu.Prig.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="InstanceGettersTest.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
