--- a/Test.program1/Test.program1.csproj
+++ b/Test.program1/Test.program1.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{97CDD0F8-724B-48A1-8925-8500117EAEE9}</ProjectGuid>
+    <ProjectGuid>{95E1F039-6E0F-4276-934B-1DB270CF6334}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test.Urasandesu.Prig.Framework</RootNamespace>
-    <AssemblyName>Test.Urasandesu.Prig.Framework</AssemblyName>
+    <RootNamespace>Test.program1</RootNamespace>
+    <AssemblyName>Test.program1</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -42,20 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleTest.cs" />
-    <Compile Include="DelegateTest.cs" />
-    <Compile Include="InstanceGettersTest.cs" />
+    <Compile Include="ConsoleContext.cs" />
+    <Compile Include="MyLibraryTest\LifeInfoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StopwatchTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NAnonym\Urasandesu.NAnonym\Urasandesu.NAnonym.csproj">
-      <Project>{C04A5E86-30E1-4C38-B916-324D000E240E}</Project>
-      <Name>Urasandesu.NAnonym</Name>
+    <ProjectReference Include="..\mscorlib.Prig\mscorlib.Prig.csproj">
+      <Project>{C7265716-797E-4358-8B93-7F60AF0E4FF0}</Project>
+      <Name>mscorlib.Prig</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Urasandesu.Prig.Framework\Urasandesu.Prig.Framework.csproj">
-      <Project>{B4F8ABB2-2FEB-484C-9EF5-404C88C44E1A}</Project>
-      <Name>Urasandesu.Prig.Framework</Name>
+    <ProjectReference Include="..\program1\program1.csproj">
+      <Project>{68A62EF4-B2AD-4634-8961-F66C2D60CBB0}</Project>
+      <Name>program1</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
