--- a/UntestableLibrary/UntestableLibrary.csproj
+++ b/UntestableLibrary/UntestableLibrary.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ULIdnMapping.cs" />
     <Compile Include="ULIntPtr.cs" />
+    <Compile Include="ULNullable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
