--- a/mscorlib.Prig/mscorlib.Prig.csproj
+++ b/mscorlib.Prig/mscorlib.Prig.csproj
@@ -68,13 +68,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EHClass.cs" />
+    <Compile Include="Globalization\PPersianCalendar.cs" />
+    <Compile Include="IO\PMemoryStream.cs" />
+    <Compile Include="IO\PStream.cs" />
     <Compile Include="PConvert.cs" />
     <Compile Include="PDateTime.cs" />
+    <Compile Include="PDateTimeParse.cs" />
     <Compile Include="PException.cs" />
     <Compile Include="PArray.cs" />
     <Compile Include="PInt32.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\PStringBuilder.cs" />
+    <Compile Include="Threading\PInterlocked.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Urasandesu.Prig.Framework\Urasandesu.Prig.Framework.csproj">
